syntax = "proto3";

message PingRequest {
}

message PongResponse {
    string version = 1; // 系统版本
    int64 size = 2; // 存储空间大小
    int64 block = 3; // 允许最大块大小
}


message StorageCreateRequest {
    bytes hash = 1; // 总HASH
    int64 size = 2; // 总大小
    string name = 3; // 文件名
}

message StorageStoreRequest {
    bytes info = 1; // 总HASH
    int64 index = 2; // 块索引
    bytes data = 3; // 存储的数据
    bytes hash = 4; // 数据HASH
}

message StorageFinishRequest {
    bytes hash = 1; // 总HASH
}

message StorageResponse {
    enum Error {
        ERROR_NONE = 0; // 未知错误
        ERROR_UNKNOWN = 1; // 未知错误
        ERROR_LACK_STORAGE = 2; // 存储空间不足
    }

    Error code = 1;
    string message = 2;
}

message GetResponse {
    bytes hash = 1;
}

message DataBlock {
    enum Type {
        STREAM = 0; // 比特流
        URI = 1; // 下载URI
    }

    bytes hash = 1;
    Type type = 2; // 块类型
    int64 index = 3; // 块索引
    bytes data = 4; // 内容

}

message DataResponse {
    enum Encode {
        NONE = 0;
        IMAGE = 1;
    }
    bytes hash = 1; // 总HASH
    int64 block = 2; // 块大小
    int64 size = 3; // 总大小
    Encode encode = 5; // 是否编码
    repeated DataBlock blocks = 4; // 数据块
}

service GoStorage {
    // 获取状态
    rpc Hello (PingRequest) returns (PongResponse) {
    }
    // 创建数据
    rpc Create (StorageCreateRequest) returns (StorageResponse) {
    }
    // 保存数据
    rpc Store (StorageCreateRequest) returns (StorageResponse) {
    }
    // 完成数据
    rpc Finish (StorageCreateRequest) returns (StorageResponse) {
    }
    // 获取数据
    rpc Get (GetResponse) returns (DataResponse) {
    }
}